--- a/templates/register.html
+++ b/templates/register.html
@@ -10,9 +10,13 @@
     <div class="container">
         <h1>Register</h1>
         <form id="registerForm" action="/register" method="post">
-            <input type="text" id="username" name="username" placeholder="username" required>
-            <input type="email" id="email" name="email" placeholder="email" required>
-            <input type="password" id="password" name="password" placeholder="password" required>
+            <div class="name-row">
+                <input type="text" id="first_name" name="first_name" placeholder="First Name" required>
+                <input type="text" id="last_name" name="last_name" placeholder="Last Name" required>
+            </div>
+            <input type="text" id="username" name="username" placeholder="Username (will be used for login)" required>
+            <input type="email" id="email" name="email" placeholder="Email" required>
+            <input type="password" id="password" name="password" placeholder="Password" required>
             <button type="submit">Register</button>
             <a href="{{ url_for('login') }}">Login</a>
             <br><br>
